cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17 CACHE STRING "C++ standard to be used")
project(Sentry-Android-Replay LANGUAGES C CXX)

# Add sentry-android shared library
add_library(sentry-android-replay SHARED src/main/jni/sentry-replay.cpp)
add_library(sentry-android-replay-headers SHARED src/main/jni/sentry-replay-with-headers.cpp)

target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/base/libs/hwui")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/base/libs/hwui/pipeline")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/base/libs/hwui/pipeline/skia")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/base/libs/androidfw/include")
#target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/base/libs/androidfw/include/androidfw")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/libbase/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/incremental_delivery/incfs/util/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libsystem/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/frameworks/native/libs/ui/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/logging/liblog/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/logging/liblog/include/log")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libutils/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libutils/binder/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libutils/binder/include/utils")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libcutils/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/system/core/libcutils/include/cutils")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/fmtlib/include")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/src/base")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/src/core")
#target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/src/text")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/android")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/core")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/config")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/effects")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/utils")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/gpu")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/include/private")
#target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/skqp/include/config")
#target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/skqp/include")
#target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia/skqp/")
target_include_directories(sentry-android-replay-headers PUBLIC "/Users/romtsn/Workspace/aosp/external/skia")
## Your-external "mylib", add GLOBAL if the imported library is located in directories above the current.
#add_library( hwui SHARED IMPORTED )
## You can define two import-locations: one for debug and one for release.
#set_target_properties( hwui PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SOURCE_DIR}/libhwui.so )
#
#target_link_libraries(sentry-android-replay hwui)
find_package(shadowhook REQUIRED CONFIG)
target_link_libraries(sentry-android-replay-headers shadowhook::shadowhook)
